assets/css/styles.css
/* ... */
body[data-theme="dark"] .gha-message-merge {
  background: #2e3238;
}

body[data-theme="dark"] .gha-feed small {
  color: rgba(255, 255, 255, 0.7);
}

body[data-theme="dark"] .github-graph {
  background: #17191c;
}

body[data-theme="dark"] .contrib-number {
  color: rgba(255, 255, 255, 0.9);
}

body[data-theme="dark"] .border,
body[data-theme="dark"] .contrib-column {
  border: 1px solid rgba(255, 255, 255, 0.1) !important;
}

body[data-theme="dark"] .text-muted {
  color: rgba(255, 255, 255, 0.6);
}

@media (max-width: 767.98px) {
  .header {
    text-align: center;
  }
  .header .profile-image {
    float: none !important;
    margin: 0 auto;
  }
  .header .profile-content {
    float: none !important;
    text-align: center;
  }
  .header .btn {
    margin-top: 30px;
    float: none !important;
  }
  .project-image {
    margin-bottom: 15px;
  }
}

@media (min-width: 1400px) {
  .container {
    width: 1360px;
    max-width: inherit;
  }
}

